[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "0.1.0"
description = "A real-world RL environment for bug triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.1",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "bug-triage-env"
version = "0.1.0"
entry_point = "server/app.py"